<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" >Food On Time</string>
    <string name="title_activity_home_menu">Food On Time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="customize">Customize</string>
    <string name="undo">Undo</string>
    <string name="contact_customer_care"><u>Call Customer Care</u></string>
    <string name="label_sample">sample</string>
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_ui">UI</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_hide_bottom_ui_controls">Hide bottom UI controls</string>
    <string name="label_freestyle_crop">Freestyle crop</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="notification_id_channel">1235</string>
    <string name="error_message_errorlayout">Something Went Wrong !!!</string>
    <string name="error_message_admin">Please Check Your Data Connection. </string>
    <string name="notification_image_saved">Image saved</string>
    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>
    <string name="menu_download">Download</string>
    <string name="failed_transaction">Sorry, your payment failed. No charges were made.Call us if you have not done this transaction.</string>
    <string name="success_transaction">Payment has been successful! Thank you for using FOT!</string>
    <string name="pending_transaction">This payment has been pending state. Call us if you have not done this transaction.</string>
    <string name="button_pick_amp_crop"><![CDATA[Pick & Crop]]></string>
    <string name="button_crop_random_image">Crop random image</string>
    <string name="description_cropped_image">Cropped image</string>
    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="format_quality_d">Quality: %d</string>
    <string name="format_d_d_px">%1$dx%2$d px</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="name"><i> Name (Max 20 chars)</i></string>
    <string name="idno"><i>ID No</i></string>
    <string name="contact"><i>Contact(Indian No Only)</i></string>
    <string name="email"><i>EmailID (Max 20 chars)</i></string>
    <string name="adress"><i>Address (Max 20 chars)</i></string>
    <string name="paynimo_trigger_default">Pay</string>
    <string name="paynimo_alert_dialog_connection_error_heading">No Internet Connection</string>
    <string name="paynimo_connection_error">Unable to load content. Check your network connection.</string>
    <string name="paynimo_loader_label">Please wait…</string>
    <string name="paynimo_fontpath">fonts/roboto_regular_webfont.ttf</string>
    <string name="paynimo_requested_payment_method_error">Please Change Your Requested Payment Mode</string>
    <string name="paynimo_payment_mode_label">PAYMENT OPTIONS</string>
    <string name="paynimo_payment_mode_amount_label">Amount ` </string>
    <string name="paynimo_alert_delete_card">Are you sure you want to delete this card?</string>
    <string name="paynimo_alert_yes">Yes</string>
    <string name="paynimo_alert_no">No</string>
    <string name="paynimo_cc_number_label">Card number</string>
    <string name="paynimo_cc_number_hint">CARD NUMBER</string>
    <string name="paynimo_cc_expdate_label">Expiry date</string>
    <string name="paynimo_cc_date_hint">MM/YY</string>
    <string name="paynimo_cc_date_separator">/</string>
    <string name="paynimo_cc_verification_label">Verification number</string>
    <string name="paynimo_cc_verification_hint">CVV </string>
    <string name="paynimo_cc_holder_name_hint">CARD HOLDER NAME</string>
    <string name="paynimo_cc_holder_name_label">Card holder name</string>
    <string name="paynimo_cc_radio_fresh_label">Pay with another card</string>
    <string name="paynimo_cc_radio_vault_label">Express pay with your saved cards</string>
    <string name="paynimo_cc_spinner_label">Select your preferred card for this payment</string>
    <string name="paynimo_cc_checkbox_label">Remember this card for the next time</string>
    <string name="paynimo_cc_user_message_label">Your information is secured using industry standard encryption</string>
    <string name="paynimo_cc_field_info_label">Please enter  available fields of the  Card </string>
    <string name="paynimo_cc_vault_field_info_label">Please enter CVV if available on Card </string>
    <string name="paynimo_cc_checkbox_si_label">Register for Auto-Debit</string>
    <string name="paynimo_cc_si_view_detail_label">View SI Details</string>
    <string name="paynimo_cc_si_validation_error_message">Please submit all SI required fields</string>
    <string name="paynimo_cc_checkbox_auto_sms_label">Auto SMS Generation</string>
    <string name="paynimo_cc_btn_paywith_otp_label">Pay</string>
    <string name="paynimo_cc_btn_paywith_3d_label">Pay using 3D Secure</string>
    <string name="paynimo_card_type_v_label">Vaulted Cards</string>
    <string name="paynimo_card_type_n_label">New Cards</string>
    <string name="paynimo_card_title_label">CARDS</string>
    <string name="paynimo_card_v_heading_label_many">SELECT FROM REGISTERED CARDS</string>
    <string name="paynimo_card_v_heading_label_single">SELECT REGISTERED CARD</string>
    <string name="paynimo_card_scan_overlay_note">Card image not captured for security purpose.</string>
    <string name="paynimo_dialog_vaulted_field_card">Enter CVV</string>
    <string name="paynimo_dialog_vaulted_field_imps">Enter OTP</string>
    <string name="paynimo_cc_invalid_cvv">Incorrect CVV</string>
    <string name="paynimo_imps_vaulted_otp_hint">OTP</string>
    <string name="paynimo_imps_title_label">IMPS</string>
    <string name="paynimo_imps_mobile_number_label">Mobile number</string>
    <string name="paynimo_imps_mobile_number_hint">Your registered mobile number</string>
    <string name="paynimo_imps_mmid_label">MMID</string>
    <string name="paynimo_imps_mmid_hint">Your Mobile Money Identifier</string>
    <string name="paynimo_imps_otp_label">OTP</string>
    <string name="paynimo_imps_otp_hint">Your One Time Password</string>
    <string name="paynimo_invalid_mobilenumberMSG">Mobile no entered is not valid</string>
    <string name="paynimo_invalid_mmidMSG">MMID entered is not valid</string>
    <string name="paynimo_imps_trigger_btn_default">@string/paynimo_trigger_default</string>
    <string name="paynimo_imps_type_v_label">Vaulted IMPS</string>
    <string name="paynimo_imps_type_n_label">New IMPS</string>
    <string name="paynimo_imps_v_heading_label">SELECT REGISTERED IMPS</string>
    <string name="paynimo_cc_invalid_otp">Incorrect OTP</string>
    <string name="paynimo_netbanking_spinner_label">Select your preferred bank for this payment</string>
    <string name="paynimo_netbanking_btn_pay_label">Pay</string>
    <string name="paynimo_otp_otp_hint">Enter OTP</string>
    <string name="paynimo_otp_authorize_btn_text">Authorize</string>
    <string name="paynimo_otp_3dsecure_user_hint">Dont Want to Wait ..</string>
    <string name="paynimo_otp_3dsecure_btn_text">Authorize with 3D Secure</string>
    <string name="paynimo_custom_dialog_ok_label">OK</string>
    <string name="paynimo_custom_dialog_cancel_label">Cancel</string>
    <string name="paynimo_custom_dialog_title_new_incoming_message">New Message …</string>
    <string name="paynimo_custom_dialog_title_payment_error">Something went  wrong …</string>
    <string name="paynimo_back_press_dialog_title">Confirm Abort…</string>
    <string name="paynimo_back_press_dialog_message">Are you sure you want abort this?</string>
    <string name="paynimo_back_press_dialog_ok_label">YES</string>
    <string name="paynimo_back_press_dialog_cancel_label">NO</string>
    <string name="paynimo_webservice_request_not_completed_error">Unable to retrieve data. Please check your Network Connection or server may be down ..</string>
    <string name="paynimo_invalidMSG">Invalid Entry …</string>
    <string name="paynimo_notAllowedCardMSG">Invalid Card ..</string>
    <string name="paynimo_emptyMSG">Empty value ..</string>
    <string name="paynimo_payments_error">There was an error. Please try with another Payment Options.</string>
    <string name="Rs">\u20B9</string>
    <string name="YouhaveRs">You have \u20B9</string>
    <string name="something_went_wrong">Something went wrong - Purely technical, Give us a minute.</string>
    <string name="goback">GO BACK</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="nodata">No Data Found</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="payement_title">PAYEMENT</string>
    <string name="Attendence_Details">Attendance Details</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="no_transactions">No transaction details available</string>
    <string name="attendance_title1">ATTENDANCE</string>
    <string name="stop">STOP  :  </string>
    <string name="card_recharge">Wallet Recharge</string>
    <string name="recharge1">Recharge</string>
    <string name="continue1">CONTINUE</string>
    <string name="ediary">E-Diary</string>
    <string name="confirm">CONFIRM</string>
    <string name="place_order_heading">Place Your Order</string>
    <string name="confirm2">Please select employee to continue</string>
    <string name="fee_payment_title">Amount Payment</string>
    <string name="payment">Payment</string>
    <string name="course">Course/Sem : &#160;</string>
    <string name="classtext">Software Developer &#160;</string>
    <string name="version">Version </string>
    <string name="versionnew">V</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="plese_click_to_continue">Please click continue to restart the application</string>
    <string name="item_name">ITEM NAME</string>
    <string name="addcount">QUANTITY</string>
    <string name="addtocart">Add To Cart</string>
    <string name="addcounttittle">Add Count</string>
    <string name="addcounthint">add count</string>
    <string name="confirmationpopup">You have items in your cart. \n Are you sure to go back?  </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="logout">Logout</string>
    <string name="cart_delete">Delete</string>
    <string name="confirm_logout">Are You Sure Want  To Log Out?</string>
    <string name="confirm_delete_cart">Are You Sure Want  To Remove this Item From Cart?</string>
    <string name="receipt_download_successful">Receipt Download Successful !</string>
    <string name="receipt_information">Receipt Information</string>
</resources>