<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/actionbarbg"
    android:paddingBottom="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Title"
            android:textStyle="bold"
            android:text="@string/receipt_information"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/first"
        android:gravity="center"
        android:id="@+id/Layt_medl">




        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/one_img"
            android:contentDescription="Color"
            android:src="@color/button_color"/>

        <TextView
            android:id="@+id/Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_download_successful"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/RelaEts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Layt_medl"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <Button
            android:id="@+id/buttonChangeOK"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ok"
            android:textColor="#FFFF"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_selector"


            />



    </LinearLayout>


</RelativeLayout>
